# APPLICATION-OF-SWARM-ALGORITHMS-IN-CONDUCTING-SEARCH-AND-RESCUE-OPERATIONS

./: LICENSE  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_msgs/share/px4_msgs/: package.ps1  package.sh
log/: latest_build
swarm_agent/: package.xml  setup.py
swarm_bringup/: CMakeLists.txt  package.xml
swarm_bringup/launch/: swarm_sitl.launch.py
swarm_bringup/scripts/: run_gzclient.sh  sitl_multiple_run.sh
swarm_bringup/worlds/: swarm_arena.world
swarm_controller/: package.xml  setup.cfg  setup.py
swarm_controller/launch/: swarm_offboard.launch.py
swarm_controller/swarm_controller/: offboard_agent.py  offboard_agent.py.bak
swarm_explorer/: package.xml  setup.cfg  setup.py
swarm_explorer/launch/: single.launch.py  swarm.launch.py
swarm_explorer/swarm_explorer/: explorer.py
swarm_interfaces/: CMakeLists.txt  package.xml
swarm_interfaces/msg/: AgentStatus.msg  Bid.msg  PheromoneGrid.msg  TargetDetection.msg
swarm_interfaces/srv/: DepositPheromone.srv  KillAgent.srv
swarm_metrics/: package.xml  setup.cfg  setup.py
swarm_metrics/swarm_metrics/: metrics.py
swarm_perception/: package.xml  setup.cfg  setup.py
swarm_perception/swarm_perception/: target_detector.py
swarm_pheromone/: package.xml  setup.cfg  setup.py
swarm_pheromone/launch/: pheromone.launch.py
swarm_pheromone/swarm_pheromone/: pheromone_server.py
