<?xml version="1.0"?>
<package format="3">
  <name>swarm_bringup</name>
  <version>0.0.1</version>
  <description>Launch files, worlds and scripts for swarm SAR simulation</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
